// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Checkbox" renders (dark theme) 1`] = `
<div
  css={[Function]}
>
  <div
    css={[Function]}
  >
    <input
      className="wireinput"
      id="1"
      style={
        {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      css={[Function]}
      htmlFor="1"
    >
      Checkbox
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders 1`] = `
<div
  css={[Function]}
>
  <div
    css={[Function]}
  >
    <input
      className="wireinput"
      id="1"
      style={
        {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      css={[Function]}
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders as invalid 1`] = `
<div
  css={[Function]}
>
  <div
    css={[Function]}
  >
    <input
      className="wireinput"
      id="1"
      style={
        {
          "cursor": "pointer",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      css={[Function]}
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"Checkbox" renders disabled 1`] = `
<div
  css={[Function]}
>
  <div
    css={[Function]}
  >
    <input
      className="wireinput"
      disabled={true}
      id="1"
      style={
        {
          "cursor": "not-allowed",
          "height": "22px",
          "marginBottom": "0",
          "opacity": 0,
          "width": "22px",
        }
      }
      type="checkbox"
    />
    <label
      css={[Function]}
      htmlFor="1"
    >
      Check
      <svg
        height="13"
        viewBox="0 0 16 13"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.65685 12.0711L15.9842 1.62738L14.57 0.213167L5.65685 9.24264L1.41421 5L0 6.41421L5.65685 12.0711Z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`"CheckboxLabel" renders 1`] = `
<div
  css={[Function]}
>
  <span
    css={[Function]}
  >
    Label
  </span>
</div>
`;
